Add Phase 3D: virtual thread executor for request handling
Virtual threads (JEP 444, JDK 21) replace the fixed-size ScheduledThreadPoolExecutor
in play.Invoker with a virtual-thread-per-task executor. The pool sweep in Phase 0D
demonstrated the manual tuning problem: play.pool must be sized to match concurrency,
and the right value varies by workload and hardware. Virtual threads eliminate this.

Key details captured in the plan:
- Scope is one file (Invoker.java) plus separating JobsPlugin onto its own platform-
  thread scheduler (background jobs should not be virtual threads)
- Hibernate 5 pinning severely limits the benefit: synchronized blocks in H2 and
  Hibernate 5 session management pin virtual threads to their carrier, defeating
  the purpose; full gains require Phase 2B (Hibernate 6) first
- 3D absorbs 3C's Option B: once Invoker runs on virtual threads, Controller.await()
  can simply call Thread.sleep(), replacing the JavaFlow continuation bytecode entirely
- play.pool config is silently ignored on JDK 21+ when virtual threads are active;
  documented as a behaviour change
- Added 3D to dependency map, change matrix, and a new "maximum performance path"
  note in the minimum viable JDK 21 section (2B → 3A → 3D)